--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -16,7 +16,8 @@
     "jp.keijiro.pugrad": "1.2.0",
     "jp.keijiro.spectral-js-unity": "1.0.0",
     "jp.keijiro.test-assets": "1.0.1",
-    "jp.keijiro.vfxgraphassets": "3.10.0"
+    "jp.keijiro.vfxgraphassets": "3.10.1",
+    "jp.keijiro.vjuitk": "1.2.0"
   },
   "scopedRegistries": [
     {
