--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -17,7 +17,8 @@
     "jp.keijiro.spectral-js-unity": "1.0.0",
     "jp.keijiro.test-assets": "1.0.1",
     "jp.keijiro.vfxgraphassets": "3.10.1",
-    "jp.keijiro.vjuitk": "1.2.0"
+    "jp.keijiro.vjuitk": "1.2.0",
+    "com.unity.modules.animation": "1.0.0"
   },
   "scopedRegistries": [
     {
